Added TankType definition for Oxidizer

--- a/GameData/B9PartSwitch/DefaultTankTypes.cfg
+++ b/GameData/B9PartSwitch/DefaultTankTypes.cfg
@@ -22,6 +22,19 @@ B9_TANK_TYPE
 
 B9_TANK_TYPE
 {
+	name = Oxidizer
+	title = #LOC_B9PartSwitch_tank_type_o // Oxidizer
+	tankMass = 0.0001
+	tankCost = 0.148
+	RESOURCE
+	{
+		name = Oxidizer
+		unitsPerVolume = 1
+	}
+}
+
+B9_TANK_TYPE
+{
 	name = LFO
 	title = #LOC_B9PartSwitch_tank_type_lfo // LFO
 	tankMass = 0.000125
