--- a/GameData/B9PartSwitch/Localization/de-de.cfg
+++ b/GameData/B9PartSwitch/Localization/de-de.cfg
@@ -12,6 +12,7 @@ Localization
         #LOC_B9PartSwitch_PartSwitchFlightDialog_select_new_subtype_dialog_title = Select <<1>>
         #LOC_B9PartSwitch_PartSwitchFlightDialog_current_subtype_label = <<1>> (Current)
         #LOC_B9PartSwitch_tank_type_lf = Flüssig Treibstoff
+        #LOC_B9PartSwitch_tank_type_o = Oxidationsmittel
         #LOC_B9PartSwitch_tank_type_lfo = LFO
         #LOC_B9PartSwitch_tank_type_monoprop = MonoPropellant
         #LOC_B9PartSwitch_tank_type_ec = Batterie
