--- a/GameData/B9PartSwitch/Localization/es-es.cfg
+++ b/GameData/B9PartSwitch/Localization/es-es.cfg
@@ -12,6 +12,7 @@ Localization
         #LOC_B9PartSwitch_PartSwitchFlightDialog_select_new_subtype_dialog_title = Seleccionar <<1>>
         #LOC_B9PartSwitch_PartSwitchFlightDialog_current_subtype_label = <<1>> (Actual)
         #LOC_B9PartSwitch_tank_type_lf = Combustible líquido
+        #LOC_B9PartSwitch_tank_type_o = Oxidante
         #LOC_B9PartSwitch_tank_type_lfo = CLO
         #LOC_B9PartSwitch_tank_type_monoprop = Monopropelante
         #LOC_B9PartSwitch_tank_type_ec = Batería
