--- a/GameData/B9PartSwitch/Localization/fr-fr.cfg
+++ b/GameData/B9PartSwitch/Localization/fr-fr.cfg
@@ -12,6 +12,7 @@ Localization
         #LOC_B9PartSwitch_PartSwitchFlightDialog_select_new_subtype_dialog_title = Sélectionner <<1>>
         #LOC_B9PartSwitch_PartSwitchFlightDialog_current_subtype_label = <<1>> (Actuel)
         #LOC_B9PartSwitch_tank_type_lf = ErgolLiquide
+        #LOC_B9PartSwitch_tank_type_o = Oxydant
         #LOC_B9PartSwitch_tank_type_lfo = LFO
         #LOC_B9PartSwitch_tank_type_monoprop = Monergol
         #LOC_B9PartSwitch_tank_type_ec = Batterie
