--- a/GameData/B9PartSwitch/Localization/pt-br.cfg
+++ b/GameData/B9PartSwitch/Localization/pt-br.cfg
@@ -12,6 +12,7 @@ Localization
         #LOC_B9PartSwitch_PartSwitchFlightDialog_select_new_subtype_dialog_title = Selecione <<1>>
         #LOC_B9PartSwitch_PartSwitchFlightDialog_current_subtype_label = <<1>> (Atual)
         #LOC_B9PartSwitch_tank_type_lf = Combustível Líquido
+        #LOC_B9PartSwitch_tank_type_o = Oxidante
         #LOC_B9PartSwitch_tank_type_lfo = CLO
         #LOC_B9PartSwitch_tank_type_monoprop = Monopropelante
         #LOC_B9PartSwitch_tank_type_ec = Bateria
